--- a/css/cv.css
+++ b/css/cv.css
@@ -11,6 +11,7 @@
 
 /*    max-width:50em;*/
 }
+@media screen { 
 .big  {
     font-size:200%;
     margin-left:auto;
@@ -20,6 +21,7 @@
     font-family: 'Open Sans', Arial, sans-serif;
     max-width:39em;
        text-shadow: -1px -2px -2px rgba(100,100,100,.7);
+}
 }
 table {
     font-size:80%;
@@ -77,8 +79,13 @@ border:0px;
 #printable h1 {
     line-height:1.2;
 }
+.decal { margin-left:5em}
 @media print { 
-    .button { visibility: hidden; }
+    .decal { top:1cm; margin-left:0em; }
+    #printable { position:absolute; top:1cm; width:50em; margin-bottom:2cm; margin-top:0cm; }
+    .hidden { visibility: hidden; }
+    .button { visibility:hidden; height:0px; display:none;}
+    #printable h1,h2 { background-color: white; border-bottom:1mm solid black; }
     #impress { visibility: hidden; }
 }
 
