--- a/css/cv.css
+++ b/css/cv.css
@@ -82,7 +82,7 @@ border:0px;
 .decal { margin-left:5em}
 @media print { 
     .decal { top:1cm; margin-left:0em; }
-    #printable { position:absolute; top:1cm; width:50em; margin-bottom:2cm; margin-top:0cm; }
+    #printable { position:relative; top:-3cm; max-width:50em; margin:2cm; }
     .hidden { visibility: hidden; }
     .button { visibility:hidden; height:0px; display:none;}
     #printable h1,h2 { background-color: white; border-bottom:1mm solid black; }
