--- a/css/cv.css
+++ b/css/cv.css
@@ -7,7 +7,8 @@
     */
 
     font-family: 'Open Sans', Arial, sans-serif;
-    font-size:90%;
+    /*font-size:90%;*/
+
 
 /*    max-width:50em;*/
 }
