--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -1,4 +1,3 @@
-@media: screen
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -142,8 +141,11 @@ a:hover, a:focus {
 
 .step {
     position: relative;
+    display:block;
     max-width:50em;
     min-width:40em;
+   /* width: 900px;
+    height: 700px;*/
     padding: 40px;
     margin: 20px auto;
 
@@ -154,7 +156,8 @@ a:hover, a:focus {
     box-sizing:         border-box;
 
     font-family: 'PT Serif', georgia, serif;
-    font-size: 48px;
+    /*font-size: 48px;*/
+    font-size:2em;
     line-height: 1.5;
 }
 
@@ -184,6 +187,19 @@ a:hover, a:focus {
     
     They cover everything what you see on first three steps of the demo.
 */
+
+.boxed {
+    display: block;
+
+    width: 900px;
+    height: 700px;
+    padding: 40px 60px;
+
+    color: rgb(102, 102, 102);
+    font-size: 30px;
+    line-height: 36px;
+    letter-spacing: -1px;
+}
 .slide {
     display: block;
 
@@ -204,7 +220,6 @@ a:hover, a:focus {
     line-height: 36px;
     letter-spacing: -1px;
 }
-
 .slide q {
     display: block;
     font-size: 50px;
