solve the printable->interactive loss of information and one bug is solved

--- a/css/cv.css
+++ b/css/cv.css
@@ -63,9 +63,9 @@ border:0px;
     min-height:800px;
     max-width:70em;
     line-height:1.2;
-    display:none ;
     font-size:15px;
-    position:block;
+    display:block;
+    position:relative;
     margin-left:auto;
     margin-right:auto;
     margin-top:1.2cm;
