--- a/css/cv.css
+++ b/css/cv.css
@@ -61,11 +61,13 @@ border:0px;
 }
 #printable { 
     min-height:800px;
-    max-width:70em;
-    line-height:1.2;
+    max-width:50em;
+    line-height:1.4;
     font-size:15px;
     display:block;
     position:relative;
+    left:auto;
+    right:auto;
     margin-left:auto;
     margin-right:auto;
     margin-top:1.2cm;
