--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -617,7 +617,7 @@ a:hover, a:focus {
 /*
     ... and we will show it when the first step (with id 'bored') is active.
 */
-.impress-on-bored .hint {
+.impress-on-init .hint {
     /*
         We remove the transparency and position the hint in its default fixed
         position.
