--- a/css/cv.css
+++ b/css/cv.css
@@ -46,7 +46,7 @@
     max-width:50em;
     line-height:1.4;
     font-size:15px;
-display:block;
+display:none;
 position:relative;
          margin-left:auto;
          margin-right:auto;
