--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -160,7 +160,7 @@ a:hover, a:focus {
     font-size:1.5em;
     line-height: 1.5;
 }
-
+#impress { display:none; } 
 /*
     ... and we enhance the styles for impress.js.
     
