--- a/css/pres.css
+++ b/css/pres.css
@@ -39,6 +39,10 @@ position:fixed;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
+small{
+    font-size:80%;
+    font-style:italic;
+}
 pre.vi{
     font-family:monospace;
     box-shadow:4px 4px 0 0 rgba(80,80,80,.2);
